# ai-bob-setup-agent

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  automation.html  bizplan.html  community.html  config.html  costs-data.json  costs.html  dashboard-data.json  dashboard.html  demo.html  fly.toml  foundation.html  howibuilt.html  index.html  install.html  install.sh  onboard.html  pitch.html  portal.html  prdfaq.html  pyproject.toml  requirements.txt  setup.html  toolstack.html  userguide.html
.github/workflows/: ci.yml  deploy-pages.yml
agents/: email_classifier.yaml  moderator.yaml  research_scanner.yaml  welcomer.yaml  writing_agent.yaml
aigovops_framework/: __init__.py  cache.py  cli.py  core.py  costs.py  engine.py  events.py  feedback.py  plugins.py  policy.py  state.py
aigovops_framework/examples/: daily_standup.yaml  invoice_reminder.yaml  slack_notifier.yaml
assets/: style.css
config/: customers.example.yaml
config/context-templates/: README.md  agents.mmd.template  insurance.mmd.template  law.mmd.template  manufacturing.mmd.template  (+3 more)
data/: foundation.db  foundation.db-shm
deploy/: README.md  ai-bob-watchdog.env  ai-bob-watchdog.service  aigovops-v2.service  com.aigovops.backup.plist  install-v2.sh  install-watchdog.sh  uninstall-watchdog.sh
docs/: architecture.md  bob-ai-brain.md  build-log.md  personal-foundation-runbook.md  source-video.md  spec.md  user-guide.md
policies/: approval.yaml  data.yaml
scripts/: audit_viewer.py  backup.sh  bootstrap.sh  command_router.py  demo.py  email_poller.py  generate_cost_data.py  generate_dashboard_data.py  healthcheck.py  local_backup.sh  provision_agent.py  provision_workspace.py  run_bot.py  setup_foundation.sh  verify_site.py  watchdog.py  web_server.py
src/: __init__.py  __main__.py  audit_log.py  config.py  hermes_install.py  mcp_config.py  observability.py  orgo_client.py  setup_agent.py  telegram_meta.py
tests/: test_coverage.py  test_e2e_foundation.py  test_email_poller_e2e.py  test_pbt_personal_foundation.py  test_smoke.py  test_v2_e2e.py  test_v2_smoke.py
voice/: README.md
(+105 files in other folders)
